// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test webhook endpoint Can fetch webhook and associated headers 1`] = `
Object {
  "webhook": Array [
    Object {
      "headers": Array [
        Object {
          "key": "header-key-1",
          "value": "header-value-1",
        },
        Object {
          "key": "header-key-2",
          "value": "header-value-2",
        },
      ],
      "url": "https://www.google.com",
    },
    Object {
      "headers": Array [],
      "url": "https://www.google.com",
    },
  ],
}
`;

exports[`Test webhook endpoint Cannot fetch webhook without the right context 1`] = `
Object {
  "webhook": Array [],
}
`;

exports[`Test webhook endpoint Only create webhook with associated securityMetadata 1`] = `
Object {
  "webhookCreate": Object {
    "headers": Array [],
    "securityMetadata": Object {
      "userId": 1,
    },
    "url": "oklm.com",
  },
}
`;

exports[`Test webhook endpoint When deleting a webhook the associated headers are deleted 1`] = `
Array [
  Object {
    "createdAt": "redacted",
    "deletedAt": null,
    "id": 1,
    "key": "header-key-1",
    "updatedAt": "redacted",
    "value": "header-value-1",
    "webhookId": 1,
  },
  Object {
    "createdAt": "redacted",
    "deletedAt": null,
    "id": 2,
    "key": "header-key-2",
    "updatedAt": "redacted",
    "value": "header-value-2",
    "webhookId": 1,
  },
]
`;

exports[`Test webhook endpoint When deleting a webhook the associated headers are deleted 2`] = `Array []`;

exports[`Test webhook endpoint When deleting a webhook the associated headers are deleted 3`] = `
Object {
  "webhookDelete": 1,
}
`;
